@@ -1,3 +1,7 @@
+2005-09-15  Masayuki Ataka  <ataka@milk.freemail.ne.jp>
+
+	* w3m-search.el (w3m-search-engine-alist): Add "blog-*" entries.
+
 2005-09-02  TAKAHASHI Kaoru  <kaoru@kaisei.org>
 
 	* doc/ptexinfmt.el: Support @frenchspacing, @euro, @sansserif.
